@@ -14,6 +14,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 ==================================================================== */
+
 package org.apache.poi.hdgf.chunks;
 
 import java.io.BufferedReader;
@@ -21,9 +22,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
-import java.util.Hashtable;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.StringTokenizer;
 
+import org.apache.poi.util.IOUtils;
+import org.apache.poi.util.LocaleUtil;
 import org.apache.poi.util.POILogFactory;
 import org.apache.poi.util.POILogger;
 
@@ -34,75 +38,92 @@ import org.apache.poi.util.POILogger;
  * Makes use of chunks_parse_cmds.tbl from vsdump to be able
  *  to process the chunk value area
  */
-public class ChunkFactory {
+public final class ChunkFactory {
+
+	//arbitrarily selected; may need to increase
+	private static final int MAX_RECORD_LENGTH = 1_000_000;
+
+
 	/** The version of the currently open document */
 	private int version;
 	/**
 	 * Key is a Chunk's type, value is an array of its CommandDefinitions
 	 */
-	private Hashtable chunkCommandDefinitions = new Hashtable();
-	/** 
-	 * What the name is of the chunk table definitions file? 
+	private final Map<Integer, CommandDefinition[]> chunkCommandDefinitions =
+            new HashMap<>();
+	/**
+	 * What the name is of the chunk table definitions file?
 	 * This file comes from the scratchpad resources directory.
 	 */
-	private static String chunkTableName = 
+	private static final String chunkTableName =
 		"/org/apache/poi/hdgf/chunks_parse_cmds.tbl";
-	
+
 	/** For logging problems we spot with the file */
-	private POILogger logger = POILogFactory.getLogger(ChunkFactory.class);
-	
+	private static final POILogger logger = POILogFactory.getLogger(ChunkFactory.class);
+
 	public ChunkFactory(int version) throws IOException {
 		this.version = version;
-		
+
 		processChunkParseCommands();
 	}
-	
-	/** 
+
+	/**
 	 * Open chunks_parse_cmds.tbl and process it, to get the definitions
-	 *  of all the different possible chunk commands. 
+	 *  of all the different possible chunk commands.
 	 */
 	private void processChunkParseCommands() throws IOException {
 		String line;
-		InputStream cpd = ChunkFactory.class.getResourceAsStream(chunkTableName);
-		if(cpd == null) {
-			throw new IllegalStateException("Unable to find HDGF chunk definition on the classpath - " + chunkTableName);
-		}
-		
-		BufferedReader inp = new BufferedReader(new InputStreamReader(cpd));
-		while( (line = inp.readLine()) != null ) {
-			if(line.startsWith("#")) continue;
-			if(line.startsWith(" ")) continue;
-			if(line.startsWith("\t")) continue;
-			if(line.length() == 0) continue;
+		InputStream cpd = null;
+		BufferedReader inp = null;
+		try {
+	        cpd = ChunkFactory.class.getResourceAsStream(chunkTableName);
+	        if(cpd == null) {
+	            throw new IllegalStateException("Unable to find HDGF chunk definition on the classpath - " + chunkTableName);
+	        }
 
-			// Start xxx
-			if(!line.startsWith("start")) {
-				throw new IllegalStateException("Expecting start xxx, found " + line);
-			}
-			int chunkType = Integer.parseInt(line.substring(6));
-			ArrayList defsL = new ArrayList();
-			
-			// Data entries
-			while( ! (line = inp.readLine()).startsWith("end") ) {
-				StringTokenizer st = new StringTokenizer(line, " ");
-				int defType = Integer.parseInt(st.nextToken());
-				int offset = Integer.parseInt(st.nextToken());
-				String name = st.nextToken("\uffff").substring(1);
-				
-				CommandDefinition def = new CommandDefinition(defType,offset,name);
-				defsL.add(def);
-			}
-			
-			CommandDefinition[] defs = (CommandDefinition[])
-				defsL.toArray(new CommandDefinition[defsL.size()]);
-			
-			// Add to the hashtable
-			chunkCommandDefinitions.put(new Integer(chunkType), defs);
+	        inp = new BufferedReader(new InputStreamReader(cpd, LocaleUtil.CHARSET_1252));
+		    
+		    while( (line = inp.readLine()) != null ) {
+    			if (line.isEmpty() || "# \t".contains(line.substring(0,1))) {
+    			    continue;
+    			}
+    
+    			// Start xxx
+    			if(!line.matches("^start [0-9]+$")) {
+    				throw new IllegalStateException("Expecting start xxx, found " + line);
+    			}
+    			int chunkType = Integer.parseInt(line.substring(6));
+    			ArrayList<CommandDefinition> defsL = new ArrayList<>();
+    
+    			// Data entries
+    			while( (line = inp.readLine()) != null ) {
+    			    if (line.startsWith("end")) {
+    			        break;
+    			    }
+    				StringTokenizer st = new StringTokenizer(line, " ");
+    				int defType = Integer.parseInt(st.nextToken());
+    				int offset = Integer.parseInt(st.nextToken());
+    				String name = st.nextToken("\uffff").substring(1);
+    
+    				CommandDefinition def = new CommandDefinition(defType,offset,name);
+    				defsL.add(def);
+    			}
+    
+    			CommandDefinition[] defs = defsL.toArray(new CommandDefinition[defsL.size()]);
+    
+    			// Add to the map
+    			chunkCommandDefinitions.put(Integer.valueOf(chunkType), defs);
+    		}
+		} finally {
+    		if (inp != null) {
+    		    inp.close();
+    		}
+    		if (cpd != null) {
+    		    cpd.close();
+    		}
 		}
-		inp.close();
-		cpd.close();
 	}
-	
+
 	public int getVersion() { return version; }
 
 	/**
@@ -112,35 +133,35 @@ public class ChunkFactory {
 	 */
 	public Chunk createChunk(byte[] data, int offset) {
 		// Create the header
-		ChunkHeader header = 
+		ChunkHeader header =
 			ChunkHeader.createChunkHeader(version, data, offset);
 		// Sanity check
-		if(header.length < 0) {
+		if(header.getLength() < 0) {
 			throw new IllegalArgumentException("Found a chunk with a negative length, which isn't allowed");
 		}
-		
+
 		// How far up to look
 		int endOfDataPos = offset + header.getLength() + header.getSizeInBytes();
-		
+
 		// Check we have enough data, and tweak the header size
 		//  as required
 		if(endOfDataPos > data.length) {
 			logger.log(POILogger.WARN,
-				"Header called for " + header.getLength() +" bytes, but that would take us passed the end of the data!");
-			
+				"Header called for " + header.getLength() +" bytes, but that would take us past the end of the data!");
+
 			endOfDataPos = data.length;
-			header.length = data.length - offset - header.getSizeInBytes();
-			
+			header.setLength(data.length - offset - header.getSizeInBytes());
+
 			if(header.hasTrailer()) {
-				header.length -= 8;
+				header.setLength(header.getLength() - 8);
 				endOfDataPos  -= 8;
 			}
 			if(header.hasSeparator()) {
-				header.length -= 4;
+                header.setLength(header.getLength() - 4);
 				endOfDataPos  -= 4;
 			}
 		}
-		
+
 
 		// Create the trailer and separator, if required
 		ChunkTrailer trailer = null;
@@ -151,7 +172,7 @@ public class ChunkFactory {
 					data, endOfDataPos);
 				endOfDataPos += 8;
 			} else {
-				System.err.println("Header claims a length to " + endOfDataPos + " there's then no space for the trailer in the data (" + data.length + ")");
+				logger.log(POILogger.ERROR, "Header claims a length to " + endOfDataPos + " there's then no space for the trailer in the data (" + data.length + ")");
 			}
 		}
 		if(header.hasSeparator()) {
@@ -159,33 +180,34 @@ public class ChunkFactory {
 				separator = new ChunkSeparator(
 						data, endOfDataPos);
 			} else {
-				System.err.println("Header claims a length to " + endOfDataPos + " there's then no space for the separator in the data (" + data.length + ")");
+				logger.log(POILogger.ERROR, "Header claims a length to " + endOfDataPos + " there's then no space for the separator in the data (" + data.length + ")");
 			}
 		}
 
 		// Now, create the chunk
-		byte[] contents = new byte[header.getLength()];
+		byte[] contents = IOUtils.safelyAllocate(header.getLength(), MAX_RECORD_LENGTH);
 		System.arraycopy(data, offset+header.getSizeInBytes(), contents, 0, contents.length);
 		Chunk chunk = new Chunk(header, trailer, separator, contents);
-		
+
 		// Feed in the stuff from  chunks_parse_cmds.tbl
-		CommandDefinition[] defs = (CommandDefinition[])
-			chunkCommandDefinitions.get(new Integer(header.getType()));
-		if(defs == null) defs = new CommandDefinition[0];
+		CommandDefinition[] defs = chunkCommandDefinitions.get(Integer.valueOf(header.getType()));
+		if (defs == null) {
+		    defs = new CommandDefinition[0];
+		}
 		chunk.commandDefinitions = defs;
-		
+
 		// Now get the chunk to process its commands
 		chunk.processCommands();
-		
+
 		// All done
 		return chunk;
 	}
-	
+
 	/**
 	 * The definition of a Command, which a chunk may hold.
 	 * The Command holds the value, this describes it.
 	 */
-	public class CommandDefinition {
+	public static class CommandDefinition {
 		private int type;
 		private int offset;
 		private String name;
@@ -194,7 +216,7 @@ public class ChunkFactory {
 			this.offset = offset;
 			this.name = name;
 		}
-		
+
 		public String getName() {
 			return name;
 		}
